--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^15.3.2",
     "react-native": "^0.42.0",
     "react-redux": "^3.1.2",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.1.1",
     "redux-thunk": "^1.0.3",
     "superagent": "^1.7.2"
