--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "clone": "^1.0.2",
     "morgan": "^1.6.1",
     "object-assign": "^4.0.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-native": "^0.42.0",
-    "react-redux": "^3.1.2",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-native": "0.49.3",
+    "react-redux": "4.4.8",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.1.1",
-    "redux-thunk": "^1.0.3",
+    "redux": "^3.7.2",
+    "redux-thunk": "2.2.0",
     "superagent": "^1.7.2"
   },
   "devDependencies": {
