--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clone": "^1.0.2",
     "morgan": "^1.6.1",
     "object-assign": "^4.0.1",
+    "prop-types": "^15.6.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-native": "0.49.3",
@@ -54,9 +55,9 @@
     "redux-devtools-log-monitor": "^1.0.11",
     "redux-logger": "^2.4.0",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.12",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-dev-server": "^1.14.1",
+    "webpack": "^2.7.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.9.3",
     "webpack-hot-middleware": "^2.6.4"
   }
 }
