--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactNativeWebHelloWorld",
+  "name": "TrackDev",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -13,16 +13,18 @@
     "clear-cache": "gulp clear-cache"
   },
   "dependencies": {
-    "babel": "^6.3.26",
-    "babel-polyfill": "^6.3.14",
+    "babel": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "clone": "^1.0.2",
     "morgan": "^1.6.1",
     "object-assign": "^4.0.1",
     "prop-types": "^15.6.0",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "react-native": "0.49.3",
-    "react-redux": "4.4.8",
+    "react": "16.1.0",
+    "react-dom": "16.1.0",
+    "react-hot-loader": "^3.1.2",
+    "react-native": "^0.50.3",
+    "react-native-web": "^0.1.13",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
@@ -32,32 +34,37 @@
   "devDependencies": {
     "autoprefixer": "^6.3.1",
     "autoprefixer-loader": "^3.2.0",
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-plugin-react-transform": "^2.0.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "css-loader": "^0.23.1",
-    "file-loader": "^0.11.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-react-transform": "^3.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-loose": "^8.0.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0",
+    "caniuse-db": "^1.0.30000760",
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
+    "fbjs-scripts": "^0.8.1",
+    "file-loader": "^1.1.5",
     "gulp": "^3.9.0",
-    "image-webpack-loader": "^3.3.1",
-    "json-loader": "^0.5.4",
-    "less": "^2.5.3",
-    "less-loader": "^2.2.2",
-    "react-native-cli": "^0.1.10",
-    "react-native-web": "0.0.104",
+    "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.4.2",
+    "json-loader": "^0.5.7",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "react-native-cli": "^2.0.1",
     "react-transform-catch-errors": "^1.0.1",
-    "react-transform-hmr": "^1.0.1",
-    "redbox-react": "^1.3.2",
-    "redux": "^3.6.0",
-    "redux-devtools": "^3.3.1",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.11",
-    "redux-logger": "^2.4.0",
-    "style-loader": "^0.13.0",
-    "webpack": "^2.7.0",
+    "react-transform-hmr": "^1.0.4",
+    "redbox-react": "^1.5.0",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-logger": "^3.0.6",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.9.3",
-    "webpack-hot-middleware": "^2.6.4"
+    "webpack-hot-middleware": "^2.20.0"
   }
 }
