--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,7 +65,7 @@ import com.android.build.OutputFile
  * ]
  */
 
-apply from: "../../node_modules/react-native/react.gradle"
+apply from: "./react.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -84,10 +84,10 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.reactnativewebhelloworld"
+        applicationId "com.trackdev"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
