--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "clone": "^1.0.2",
+    "fbjs-scripts": "^0.8.1",
     "morgan": "^1.6.1",
     "object-assign": "^4.0.1",
     "prop-types": "^15.6.0",
@@ -26,6 +27,8 @@
     "react-native-web": "^0.1.13",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
+    "react-router-native": "^4.2.0",
+    "react-router-navigation": "^1.0.0-rc.3",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "2.2.0",
@@ -37,6 +40,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-react-transform": "^3.0.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
@@ -45,7 +49,6 @@
     "caniuse-db": "^1.0.30000760",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
-    "fbjs-scripts": "^0.8.1",
     "file-loader": "^1.1.5",
     "gulp": "^3.9.0",
     "html-webpack-plugin": "^2.30.1",
