--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "object-assign": "^4.0.1",
     "prop-types": "^15.6.0",
     "react": "16.1.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "16.1.0",
     "react-hot-loader": "^3.1.2",
     "react-native": "^0.50.3",
     "react-native-web": "^0.1.13",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-native": "^4.2.0",
     "react-router-navigation": "^1.0.0-rc.3",
     "react-router-dom": "^4.2.2",
