Revert to original build.gradle

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,7 +65,11 @@ import com.android.build.OutputFile
  * ]
  */
 
-apply from: "./react.gradle"
+project.ext.react = [
+        entryFile: "index.js"
+]
+
+apply from: "../../node_modules/react-native/react.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -84,7 +88,7 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.trackdev"
