--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "react-native start",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
     "ios-bundle": "react-native bundle --dev false --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
     "ios-dev-bundle": "react-native bundle --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
     "android-bundle": "react-native bundle --dev false --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
@@ -13,8 +13,6 @@
     "clear-cache": "gulp clear-cache"
   },
   "dependencies": {
-    "babel": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
     "clone": "^1.0.2",
     "fbjs-scripts": "^0.8.1",
     "morgan": "^1.6.1",
@@ -24,14 +22,14 @@
     "react-bootstrap": "^0.31.5",
     "react-dom": "16.1.0",
     "react-hot-loader": "^3.1.2",
-    "react-native": "^0.50.3",
-    "react-native-web": "^0.1.13",
+    "react-native": "0.50.4",
+    "react-native-web": "0.1.14",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.2.2",
     "react-router-native": "^4.2.0",
     "react-router-navigation": "^1.0.0-rc.3",
-    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "2.2.0",
     "superagent": "^1.7.2"
@@ -39,37 +37,41 @@
   "devDependencies": {
     "autoprefixer": "^6.3.1",
     "autoprefixer-loader": "^3.2.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-react-transform": "^3.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-native": "4.0.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "caniuse-db": "^1.0.30000760",
+    "caniuse-db": "^1.0.30000775",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
-    "gulp": "^3.9.0",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
+    "jest": "21.2.1",
     "json-loader": "^0.5.7",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "metro-bundler": "0.20.3",
     "react-native-cli": "^2.0.1",
     "react-transform-catch-errors": "^1.0.1",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.5.0",
     "redux-devtools": "^3.4.1",
-    "redux-devtools-dock-monitor": "^1.1.2",
-    "redux-devtools-log-monitor": "^1.4.0",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.9.3",
-    "webpack-hot-middleware": "^2.20.0"
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-dev-server": "^2.9.5",
+    "webpack-hot-middleware": "^2.21.0"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
