--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react-dom": "16.1.0",
     "react-hot-loader": "^3.1.2",
     "react-native": "0.50.4",
-    "react-native-web": "0.1.14",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-bootstrap": "^0.24.4",
@@ -60,6 +59,7 @@
     "less-loader": "^4.0.5",
     "metro-bundler": "0.20.3",
     "react-native-cli": "^2.0.1",
+    "react-native-web": "^0.1.14",
     "react-transform-catch-errors": "^1.0.1",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.5.0",
