--- a/package.json
+++ b/package.json
@@ -13,24 +13,31 @@
     "clear-cache": "gulp clear-cache"
   },
   "dependencies": {
-    "clone": "^1.0.2",
-    "fbjs-scripts": "^0.8.1",
+    "bootstrap": "^4.1.0",
+    "clone": "^1.0.4",
+    "fbjs-scripts": "^0.8.2",
+    "history": "^4.7.2",
     "morgan": "^1.6.1",
     "object-assign": "^4.0.1",
-    "prop-types": "^15.6.0",
-    "react": "16.1.0",
-    "react-bootstrap": "^0.31.5",
-    "react-dom": "16.1.0",
+    "prop-types": "^15.6.1",
+    "react": "16.3.1",
+    "react-dom": "16.3.1",
     "react-hot-loader": "^3.1.2",
-    "react-native": "0.50.4",
-    "react-redux": "^5.0.6",
+    "react-native": "^0.55.2",
+    "react-native-web": "^0.5.4",
+    "react-primitives": "^0.5.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-router-native": "^4.2.0",
-    "react-router-navigation": "^1.0.0-rc.3",
+    "react-router-navigation": "^1.0.0-rc.5",
+    "react-router-redux": "5.0.0-alpha.9",
+    "reactstrap": "^5.0.0",
+    "recyclerlistview": "^1.3.1",
     "redux": "^3.7.2",
-    "redux-thunk": "2.2.0",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^3.2.5",
     "superagent": "^1.7.2"
   },
   "devDependencies": {
@@ -38,38 +45,39 @@
     "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.4",
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-webpack-alias": "^2.1.2",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-native": "4.0.0",
+    "babel-plugin-react-native-web": "^0.5.4",
+    "babel-plugin-root-import": "^5.1.0",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-plugin-styled-components": "^1.5.1",
     "babel-runtime": "^6.26.0",
-    "caniuse-db": "^1.0.30000775",
-    "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.5",
+    "caniuse-db": "^1.0.30000828",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^2.30.1",
-    "image-webpack-loader": "^3.4.2",
+    "image-webpack-loader": "^3.6.0",
     "jest": "21.2.1",
     "json-loader": "^0.5.7",
     "less": "^2.7.3",
-    "less-loader": "^4.0.5",
+    "less-loader": "^4.1.0",
     "metro-bundler": "0.20.3",
+    "react-hot-loader": "^4.0.1",
     "react-native-cli": "^2.0.1",
-    "react-native-web": "^0.2.0",
     "react-transform-catch-errors": "^1.0.1",
-    "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.5.0",
-    "redux-devtools": "^3.4.1",
     "redux-logger": "^3.0.6",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
+    "style-loader": "^0.19.1",
+    "webpack": "^3.11.0",
     "webpack-dev-middleware": "^1.12.2",
-    "webpack-dev-server": "^2.9.5",
-    "webpack-hot-middleware": "^2.21.0"
+    "webpack-dev-server": "^2.11.2",
+    "webpack-hot-middleware": "^2.22.0"
   },
   "jest": {
     "preset": "react-native"
